# opengl-fractal

./: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  imgui.ini  opengl-fractal.sln
Dependencies/GLFW/glfw/: GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters
Dependencies/GLFW/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
Dependencies/glew-2.1.0/: glew.pc
opengl-fractal/: fractal  imgui.ini  opengl-fractal.vcxproj  opengl-fractal.vcxproj.filters
opengl-fractal/res/shaders/: Basic.shader  Crosshair.shader  Fractal.shader  Fractal.shader.old  Julia.shader  Mandelbrot.shader  Multibrot.shader  Multijulia.shader
opengl-fractal/src/: #Texture.cpp#  #main.cpp#  .#rotaryencoder2.py  CMakeLists.txt  Fractal.cpp  Fractal.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Makefile  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  cmake_install.cmake  fractal2  imgui.ini  main - Copy.cppb  main.cpp  rotaryencoder.py  rotaryencoder2.py
opengl-fractal/src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestFractal.cpp  TestFractal.h  TestTexture - Copy.cppb  TestTexture.cpp  TestTexture.h
systemd/system/: fractal.service  unclutter.service
